@startuml OKW_State.svg
 [*] --> OK : Execute Test
 OK --> NOK : OKW_Exception
 NOK --> OK: BeginTest
 OK --> OK: OKW-Keyword
 OK --> [*]
 NOK --> [*]
@enduml
@startuml OKW_StateClass.svg
 class Core
 interface IOKW_State
 class OK
 class NOK
  
 Core o-- IOKW_State: CurrentState
 OK --> Core: core
 NOK --> Core: core
 IOKW_State <|.. OK
 IOKW_State <|.. NOK
@enduml
@startuml OKW_UseCase_Keyword_de.svg
:Fachtester: -right-> (Testfall in Schlüsselwortnotation) : erstellt
@enduml
